# tracewise

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/seeded/: clean_mcu.net  expected.json  floating_enable.net  floating_irq.net  gnd_only_ok.net  i2c_no_pullup.net  i2c_pinfunction.net  multi_fault.net  no_decoupling.net  sd_lines_ok.net  unused_output_ok.net
docs/: DESIGN.md  FORMULATION.md  PIPELINE-DESIGN.md  PLACE-ROUTE-COUPLING.md  PLAN.md  RESUME.md  ROUTER-DESIGN.md  ROUTING-COMPLETION-PLAN.md  review-benchmark-llm.md  review-benchmark.md  route-ablation-r4.md  route-ablation-v2.md  route-ablation-v3.md  route-ablation.md  spike-0-kiutils.md
docs/design/: CONCURRENT-DETAILED-ROUTER.md  CROSS-SUBSTRATE-COOPT.md  EXACT-GEOMETRY-ROUTER-ARCH.md  F0-pour-extraction.md  FAR-gridless-router-arch.md  GLOBAL-CORRIDOR-OPTIMIZER.md  GLOBAL-ROUTER-DESIGN.md  PHASE-B-emit-integration.md  PHASE1-coarsen-refine-architecture.md  TOPOLOGY-CLASS-ROUTING.md
docs/research/: F3-high-fanout-power.md  FAR-gridless-routing-survey.md  HUMAN-ROUTING-TECHNIQUES.md  INVENT-human-mimicry-router.md  NEXT-exact-geometry-routing.md  (+5 more)
scripts/: _invent1_human_stats.py  _invent2_topology.py  _probe_cdr_spike.py  _probe_gco_spike.py  _probe_isolation_analysis.py  _probe_pour_artifact.py  _probe_route_human.py  _probe_tcr_e1.py  _verify_b4.py  _verify_fanout_rescue_ab.py  _verify_gridless_first_ab.py  _verify_m1_emit_drc.py  _verify_m2_gate.py  _verify_m3_ab.py  _verify_m3_negotiate_ab.py  _verify_m3p11.py  _verify_m3p2_residual.py  ablation_route.py  b3_scorecard_measure.py  b4_route_measure.py  benchmark_review.py  m2_gate_measure.py  mco1_measure.py  mco3_measure.py  place_route_measure.py  probe_clearance_nudgeability.py  probe_human_routing.py  probe_intra17_order.py  probe_order.py  probe_via_nudge_holeaware.py  spike0_gridless_single_net.py  spike0b_gridless_blocked_net.py  spike1_gridless_congested_region.py  spike2_run2_congestion_ripup.py  spikeM3P2_gridless_multipin.py  spikeM3_gridless_via_2layer.py  spike_coopt_shared_field.py  spike_coupling.py  spike_csru2_multipin_ripup.py  spike_csru_cross_substrate_ripup.py  (+6 more)
tests/: test_ceiling.py  test_constraints.py  test_datasheets.py  test_emit_nudge.py  test_engine.py  test_engine_multi.py  test_exact_geom.py  test_gridless.py  test_gridless_engine.py  test_gridless_first.py  test_gridless_m3.py  test_gridless_m3p2.py  test_gridless_rescue.py  test_mco1_coopt.py  test_negotiate.py  test_netlist.py  test_package.py  test_pathfinder.py  test_place.py  test_pours.py  test_review.py  test_sexpr.py  test_topo_assign.py
(+59 files in other folders)
