[project]
name = "tracewise"
version = "0.0.1"
description = "AI-assisted place & route for KiCad: datasheet-grounded schematic review, constraint generation for autorouting, analytical placement."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Pavel Palgin" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "pypdf>=4.0",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
gridless = ["shapely>=2.0,<3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracewise"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
